fix some borders not showing up

--- a/usr/share/themes/Mint-X/gtk-3.0/gtk-widgets-borders.css
+++ b/usr/share/themes/Mint-X/gtk-3.0/gtk-widgets-borders.css
@@ -83,7 +83,9 @@
 **************************/
 
 .primary-toolbar .button.raised,
+.primary-toolbar .button.raised:hover,
 .primary-toolbar .raised .button,
+.primary-toolbar .raised .button:hover,
 .primary-toolbar GtkComboBox .button {
     border-style: solid;
     border-width: 2px;
@@ -97,6 +99,7 @@
 }
 
 .primary-toolbar .button:active,
+.primary-toolbar .button:active:hover,
 .primary-toolbar .button.raised:active,
 .primary-toolbar .raised .button:active {
     border-style: solid;
@@ -124,6 +127,28 @@
                 inset 0 -1px alpha(white, 0.06);
 }
 
+.primary-toolbar .button,
+.primary-toolbar .button:insensitive {
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 3px;
+    border-color: transparent;
+    border-image: none;
+    box-shadow: none;
+}
+
+.primary-toolbar .button:hover {
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 3px;
+    border-color: transparent;
+    border-image: -gtk-scaled(url("borders/button/button.png"), url("borders/button/button@2.png")) 4 / 4px stretch;
+    box-shadow: inset 0 1px alpha(white, 1.0),
+                inset 1px 0 alpha(white, 0.5),
+                inset -1px 0 alpha(white, 0.5),
+                inset 0 -1px alpha(white, 0.1);
+}
+
 .primary-toolbar .button:insensitive:active,
 .primary-toolbar .button.raised:insensitive:active,
 .primary-toolbar .raised .button:insensitive:active {
@@ -136,16 +161,6 @@
                 inset 1px 0 alpha(black, 0.02),
                 inset -1px 0 alpha(black, 0.02),
                 inset 0 -1px alpha(black, 0.01);
-}
-
-.primary-toolbar .button,
-.primary-toolbar .button:insensitive {
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 3px;
-    border-color: transparent;
-    border-image: none;
-    box-shadow: none;
 }
 
 /*****************
